Upgrade frontend dependencies and refactor stock testing components
- Update Svelte, Vite, and TypeScript to latest versions
- Add ECharts and svelte-echarts for enhanced charting
- Improve stock testing workflow and result visualization
- Enhance type definitions and configuration files
- Modify Modal and StockTest components for better UX

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "baseUrl": ".",
     /**
@@ -15,7 +16,9 @@
      */
     "allowJs": true,
     "checkJs": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "skipLibCheck": true,
+    "strict": true
   },
   "include": [
     "src/**/*.d.ts",
