--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,21 +10,24 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.1",
-    "@tsconfig/svelte": "^3.0.0",
-    "svelte": "^3.49.0",
-    "svelte-check": "^2.8.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tsconfig/svelte": "^4.0.1",
+    "svelte": "^4.2.12",
+    "svelte-check": "^3.6.0",
+    "svelte-preprocess": "^5.1.3",
     "tslib": "^2.4.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "typescript": "^5.0.0",
+    "vite": "^5.4.9"
   },
   "dependencies": {
     "@highcharts/svelte": "^1.1.1",
+    "echarts": "^5.6.0",
     "highcharts": "^12.1.2",
     "lightweight-charts": "^4.2.3",
     "lucide-svelte": "^0.474.0",
     "pinyin-match": "^1.2.6",
     "pinyin-pro": "^3.26.0",
+    "svelte-echarts": "^1.0.0-rc3",
     "svelte-french-toast": "^1.2.0",
     "svelte-spa-router": "^4.0.1",
     "tippy.js": "^6.3.7"
